cmake_minimum_required(VERSION 3.27)
project(codeForces)

set(CMAKE_CXX_STANDARD 17)

add_executable(. StringMaximizing.cpp main.cpp "wierd Problem.cpp"
        JellyFish.cpp stringsMaking.cpp
        Quests.cpp
        CollectingGame.cpp
        BrMeast.cpp
        modification.cpp
        Aquarium.cpp
        twoDimMinDis.cpp
        addMargin.cpp
        tenzingBooks.cpp
        minimumSkibusAndOhioIMP.cpp
        rough.cpp
        maximumSum.cpp
        LunaticContent.cpp
        countingOrders.cpp
        LunaticContent.cpp
        sortTheSubarray.cpp
        LargestRectArea.cpp
        SEGMENTTREES.cpp
        subsequenceAddtion.cpp
        ROUGHS.cpp
        PairProgramming.cpp
        DivisionBy2Permutation.cpp
        CubeExists.cpp
        LongestDivisorIntervel.cpp
        sameDifferences.cpp
        nonAdjacentMatrix.cpp
        redBluePattern.cpp
        cmake-build-debug/negandPos.cpp
        cmake-build-debug/negandPos.h
        teleporters.cpp
        MinPrimestoMakesum.cpp
        Rough2.cpp
        groupsTravel.cpp
        theaterSquare.cpp
        maxMinSum.cpp
        transfusion.cpp
        contestDIV2.cpp triplePrime.cpp
        tPrime.cpp
        RowGCD.cpp
        primeNumber.cpp
        goodSequence.cpp
        sequence.cpp
        DivisionBy2Andpermu.cpp
        strangeSub.cpp
        killMonster.cpp
        mirrorString.cpp
        paintTheArray.cpp
        gcdLength.cpp
        TMT.cpp
        YetAnotherVardDeck.cpp
        updateFiles.cpp
        LongJumps.cpp
        AllAresame.cpp
        LIS.cpp        elementryParticals.cpp         shiftingSort.cpp        kalindrome.cpp
        newColony.cpp        specialNumber.cpp        partialReplacement.cpp        Ksubarrays.cpp
        dungeon.cpp
        SumOfcubes.cpp strangeSub.cpp         SumOfcubes.cpp
        NezzarandLuckyNumber.cpp
        contestDiv35th.cpp
        gameOnRanges.cpp
        NezzarandLuckyNumber.cpp
        pleasantPairs.cpp         contestDiv35th.cpp
        palindromeGame.cpp
        stableGroups.cpp         pleasantPairs.cpp
        palindromeGame.cpp
        MochaHiking.cpp
        penalty.cpp  MochaHiking.cpp
        kLCM.cpp
        MEXonStrings.cpp
        bisSumAnd0.cpp
        poisnedDagger.cpp
        WrongAddtion.cpp
        TwoColors.cpp
        CoruptedArray.cpp
        cardaConstructions.cpp
        EvenOddGame.cpp
        Equalisation.cpp
        MakeThemEqual.cpp
        ArrayColoring.cpp
        DeleteTwoElements.cpp
        HomoShopping.cpp
        ABPalindrome.cpp
        pursuit.cpp
        kthNonDivisablrByN.cpp
        MArray.cpp
        Jumps.cpp
        FliptheBits.cpp
        Oddselecetion.cpp
        AlternatingSubsequence.cpp
        MakingPalindromeInoneLetter.cpp
        sequenceTransfer.cpp
        replaceAndkeepSorted.cpp
        winePickup.cpp
        contest1.cpp
        q800.cpp
        boatsCompition.cpp
        xxxx.cpp
        DistrictConnection.cpp
        makorItGood.cpp
        ternarySearch.cpp
        RockandLever.cpp
        ternaryXor.cpp
        RedAndBlue.cpp
        ThreeActivities.cpp
        makeAllequal.cpp
        PlusMinusPermutation.cpp
        AssemblyViaMinimus.cpp
        vikaAndBridge.cpp
        contrastValue.cpp
        pushingBalls.cpp
        playingCasino.cpp
        catCycle.cpp
        doraAndSearch.cpp
        Matryoshkas.cpp
        scuza.cpp
        removingSmallestMultiplies.cpp
        friendsAndRestaurant.cpp
        virus.cpp
        MirrorGrid.cpp
        Binarydeque.cpp
        stongeAgeProblen.cpp
        Dolcavita.cpp
        differentialSorting.cpp
        sameParitySummands.cpp
        reverseBinaryStrings.cpp
        AccurateLee.cpp
        GcdPartition.cpp
        CoPrime.cpp
        DemoDogs.cpp
        DifferenceOfGCDs.cpp
        AndSorting.cpp
        AperfectlybalancedString.cpp
        eatingCadies.cpp
        SubstractionOperaion.cpp
        FunWithSubarrays.cpp
        Restoration.cpp
        BuildPermutation.cpp
        Jogging.cpp
        laterns.cpp
        YoungExplore.cpp
        MinimalCost.cpp
        sortedDifference.cpp
        seqWithDigits.cpp
        LevelStatistics.cpp
        NighbourGrid.cpp
        waterSlide.cpp
        graphDiameter.cpp
        twoLargeBags.cpp
        commonPrefixes.cpp
        JhoonyAndHoobies.cpp
        stairs.cpp
        NoOfpairs.cpp
        coinsRows.cpp
        nastiaAndGoodArray.cpp
        ArrayAndoperations.cpp
        divisablePairs.cpp
        findDifferentOnes.cpp
        amke2Power.cpp
        SittingGame.cpp
        coGrowingSequence.cpp
        TableFitting.cpp
        paprikaAndPermutation.cpp
        BlurredPermutation.cpp
        slayTheDragon.cpp
        Inflation.cpp
        reverseString.cpp
        TPrimes.cpp
        ExpensiveNumber.cpp
        simpleStrings.cpp
        ProductOfThree.cpp
        AvgSleepTime.cpp
        JusteatIt.cpp
        CanineProperty.cpp
        SocialDistancesSubsequence.cpp
        RomanticGlasses.cpp
        MakeItAlternating.cpp
        DivideAndEqualize.cpp
        ScoringSubsequence.cpp
        snowflakes.cpp
        StrongVertices.cpp
        GardenerQuestion.cpp
        pairsStatisfying.cpp
        BlackWhiteBlancedTree.cpp
        MaximalAnd.cpp
        chatBan.cpp
        ArrayElemination.cpp
        DeepDownBelow.cpp
        BoxFitting.cpp
        Birthdayparty.cpp
        turnAndmove.cpp
        LCMquestion.cpp
        NumberIntoSequence.cpp
        ShuffleSort.cpp
        alwalPuzzle.cpp
        AntiSudoku.cpp
        MinimizeDistance.cpp
        MinimalSwaps.cpp
        mereArray.cpp
        kthBeautifulString.cpp
        DvisibleConfusion.cpp
        socialDistance.cpp
        cutRibbion.cpp
        saveTheCity.cpp

        CF_Round1024.cpp
        lrcAndvip.cpp
        AppleAndBoxes.cpp
        maximumSubarraySum.cpp
        spanningTree.cpp
        spanningTree2.cpp
        MoveToEnd.cpp
        ArrayAndGCD.cpp
        sportsBetting.cpp
        shashaAndBars.cpp
        DissaperPermutation.cpp
        unPleasentStrings.cpp
        TwoRoundDances.cpp
        cokkie.cpp
        binaryTypeWriter.cpp
        sortTheArray.cpp
        pokiemonArmy.cpp
        polygon.cpp
        plusAndMInuses.cpp
        negtivePrefixes.cpp
        IQtest.cpp
        viciousLabyrinth.cpp
        ArrayGame.cpp
        costOfArray.cpp
        Contest1025.cpp
        JumpingThroughSegments.cpp
        makeThisRound.cpp
        scheduleManagement.cpp
        AddModTen.cpp
        setOfStrangers.cpp
        floorOrceil.cpp
        LimitedRepainting.cpp
        removeTheEnds.cpp
        RemoveExactly2.cpp
        palindromeSunsequence.cpp
        sumOnSegments.cpp
        distinctRepresentation.cpp
        BracketColoring.cpp
        IvaAndPav.cpp
        HossamAndFriends.cpp
        DrawTrees.cpp
        Reginols.cpp
        AndSequences.cpp
        DroneGame.cpp
        BallInBernland.cpp
        ratingDrop.cpp
        zeroRemainderArray.cpp
        oracAndModels.cpp
        TheNumberOfProducts.cpp
        journeyPlanning.cpp
        BasketBallExcercise.cpp
        candyBox.cpp
        weirdSum.cpp
        beautifulTriplePairs.cpp
        fortuneTelling.cpp
        sheeps.cpp
        GroupingIncreases.cpp
        Dances.cpp
        AnnaAndvalentinesGift.cpp
        DancesHard.cpp
        MeximumArray.cpp
        Round1028.cpp
        ComeALittleCloser.cpp
        PhenoixAndBeauty.cpp
        SubsequencesHate.cpp
        rotatingMatching.cpp
        mochaAndDiana.cpp
        webOfLies.cpp
        swapsII.cpp
        NumberGame.cpp
        AccidentalVictory.cpp
        NotAssigning.cpp
        ProductiveMeeting.cpp
        AvoidPrimes.cpp
        UnstableString.cpp
        FindTheArray.cpp
        pheonixAndTowers.cpp
        PalindromeColoring.cpp
        wonderfullColoring.cpp
        epicTransformation.cpp
        IHate111.cpp
        DominantCharecter.cpp
        ElementExtermination.cpp
        Team.cpp
        kefkaAndCats.cpp
        flowers.cpp
        Workout.cpp
        WhereIsPizza.cpp
        EqualValues.cpp
        Retailation.cpp
        LongtailHedgehog.cpp
        KireiAttackstheEstate.cpp
        CCStarters190.cpp
        contest1030.cpp
        SegmentTreesLC.cpp
        EdgyTrees.cpp
        ZeroArray.cpp
        balancedBitstring.cpp
        PatheticMexs.cpp
        ZeroQuantity.cpp
        KcompleteWord.cpp
        poweredAddition.cpp
        AppleTreeTraversing.cpp
        kAmazingNumber.cpp
        mortalCombatTower.cpp
        LabourOfHercules.cpp
        EasternExhibition.cpp
        AgagaXOR.cpp
        LineEmpire.cpp
        factorialAndPowersOfTwo.cpp
        contestCC191.cpp
        PalindromeBasis.cpp
        controllers.cpp
        TeaTasting.cpp
        DataStructureFan.cpp
        strangeSort.cpp
        cf1033.cpp
        GoodString.cpp
        cfSubsequence.cpp
        AndMatching.cpp
        div2Con.cpp
        maximumWidth.cpp
        rings.cpp
        pythogoredTriplets.cpp
        IntrestingStory.cpp
        AirConditioners.cpp
        dulicAndKenya.cpp
        contestCC.cpp
        Backspace.cpp
        IntegerShops.cpp
        runningForGold.cpp
        IntrestingFunction.cpp
        Potions.cpp
        PlusAndMultiply.cpp
        EqualizeTheArray.cpp
        BfsForGcdChecking.cpp
        LostSoul.cpp
)

add_executable(varsh
#        UnstableString.cpp
#        WhereIsPizza.cpp
#        Workout.cpp
#        LongtailHedgehog.cpp
#        cf1033.cpp
        BfsForGcdChecking.cpp
        LostSoul.cpp
)
